# MedCoPilot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  Dockerfile  Makefile  README.md  alembic.ini  compose.mock-ehr.yml  docker-compose.yml  implementation-notes.md  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial_baseline.py  0002_dialogue.py  0003_soap_report.py  0004_soap_correction.py  0005_soap_report_created_at.py  0006_llm_correction_proposal.py  0007_ehr_publication.py  0008_icd_resolution.py
app/: main.py  models.py
data/golden/: coding_en.jsonl
mock_ehr/: README.md  patient_context.json
mock_ehr/fixtures/: manifest.json  post-visit-bundle.json  pre-visit-bundle.json  publication-context.json
scripts/: bench_agreement.py  bench_soap.py  e2e_smoke.py  eval_codiesp.py  eval_coding.py  eval_normalizer_v0.py  fetch_aci_bench.py  fetch_icd.py  fetch_mkb_nsi.py  load_test.py  parse_icd10cm.py  seed_mock_ehr.py  smoke_editor.py  smoke_extractor.py  smoke_nli_scorer.py  smoke_vllm_nli.py
src/app/: __init__.py  dependencies.py  errors.py  main.py  middleware.py  routes.py
src/assessment/: __init__.py  annotation.py  annotation_repository.py  changes.py  enums.py  use_cases.py
src/bench/: __init__.py  agreement.py  datasets.py  judges.py  report.py  runner.py
src/config/: __init__.py  logging.py  settings.py
src/di/: __init__.py  container.py  deps.py
src/dialogue/: __init__.py  dialogue.py  orm.py  providers.py  repository.py  samples.py  serialization.py  sqlalchemy_repository.py  use_cases.py
src/ehr/: __init__.py  client.py  dispatcher.py  errors.py  fhir.py  gateway.py  models.py  providers.py  publication.py  publication_orm.py  publication_repository.py  publication_sqlalchemy_repository.py  publication_use_cases.py  repository.py  serialization.py  use_cases.py
src/icd/: __init__.py  bm25_coder.py  bm25_resolver.py  coder.py  dictionary.py  icd10_sample.json  resolver.py  tokenizer.py
src/infra/: __init__.py  db.py  ehr.py  ehr_patients.json  fhir.py  llm.py  nli.py  (+1 more)
tests/: test_api.py  test_api_schemas.py  test_app_smoke.py  test_bench_agreement.py  test_bench_datasets.py  test_bench_judges.py  test_bench_report.py  test_bench_runner.py  test_container.py  test_context_provenance.py  test_correction.py  test_correction_api.py  test_db.py  test_dialogue.py  test_dialogue_api.py  test_dialogue_repository.py  test_editor_api.py  test_ehr.py  test_ehr_publication_repository.py  test_ehr_workflow.py  test_extract_soap_report.py  test_extractor_icd_coding.py  test_fhir_gateway.py  test_fhir_live.py  test_fhir_publication.py  test_fhir_publication_e2e.py  test_fhir_publication_gateway.py  test_fhir_publication_live.py  test_health.py  test_icd_coder.py  test_icd_resolver.py  test_lexical_grounding_scorer.py  test_lexical_normalizer.py  test_llm_client_adapter.py  test_llm_editor.py  test_llm_extractor.py  test_llm_reranker.py  test_llm_soap_extractor.py  test_mock_ehr_client.py  test_mock_ehr_fixtures.py  (+23 more)
ui/: README.md  app.py  pyproject.toml
(+65 files in other folders)
