[project]
name = "medcopilot"
version = "0.1.0"
description = "Clinical SOAP-extraction service: turns a doctor-patient dialogue into structured SOAP notes."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "mypy>=2.3.0",
    "pytest>=8.3.0",
    "ruff>=0.15.21",
]

[tool.ruff]
src = ["src", "tests"]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "C4",  # flake8-comprehensions
]

[tool.mypy]
files = ["src"]
python_version = "3.12"
strict = true
warn_unreachable = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
