[project]
name = "medcopilot"
version = "0.1.0"
description = "Clinical SOAP-extraction service: turns a doctor-patient dialogue into structured SOAP notes."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "structlog>=25.1",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.31.0",
    "alembic>=1.18.5",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "mypy>=2.3.0",
    "pre-commit>=4.0.0",
    "pytest>=8.3.0",
    "ruff>=0.15.21",
]

[tool.ruff]
src = ["src", "tests"]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "C4",  # flake8-comprehensions
]

[tool.mypy]
files = ["src"]
python_version = "3.12"
strict = true
warn_unreachable = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
